WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99223
AtomicString::HashAndUTF8CharactersTranslator::equal() doesn't optimally handle 8 bit strings
https://bugs.webkit.org/show_bug.cgi?id=99223
Summary
AtomicString::HashAndUTF8CharactersTranslator::equal() doesn't optimally hand...
Michael Saboff
Reported
2012-10-12 17:56:36 PDT
HashAndUTF8CharactersTranslator::equal() uses StringImpl::characters() on subject string to access the characters to compare, possibly up converting an 8 bit string.
Attachments
Patch
(2.17 KB, patch)
2012-10-12 18:05 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
Updated Patch
(2.04 KB, patch)
2012-10-12 18:11 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2012-10-12 18:05:57 PDT
Created
attachment 168520
[details]
Patch
Michael Saboff
Comment 2
2012-10-12 18:11:32 PDT
Created
attachment 168524
[details]
Updated Patch Cleaned up white space error in original patch.
Geoffrey Garen
Comment 3
2012-10-17 14:51:27 PDT
Comment on
attachment 168524
[details]
Updated Patch r=me
WebKit Review Bot
Comment 4
2012-10-17 15:08:27 PDT
Comment on
attachment 168524
[details]
Updated Patch Clearing flags on attachment: 168524 Committed
r131652
: <
http://trac.webkit.org/changeset/131652
>
WebKit Review Bot
Comment 5
2012-10-17 15:08:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug