AtomicString::HashAndUTF8CharactersTranslator::equal() doesn't optimally handle 8 bit strings https://bugs.webkit.org/show_bug.cgi?id=99223

Reviewed by Geoffrey Garen.

Added an 8 bit path.

* wtf/text/AtomicString.cpp:
(WTF::HashAndUTF8CharactersTranslator::equal):


Canonical link: https://commits.webkit.org/117607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131652 268f45cc-cd09-0410-ab3c-d52691b4dbfc